--- a/index.html
+++ b/index.html
@@ -2,17 +2,92 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Profile</title>
-  </head>
-
-  <body>
-    <p>Hello world</p>
-    <img
-      src="https://upload.wikimedia.org/wikipedia/commons/4/48/Silly_Dog_%282277051513%29.jpg"
-      alt="A silly looking dog."
-      width="400px"
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@400&display=swap"
+      rel="stylesheet"
     />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <img src="/logo.jpg" alt="Logo" />
+        </div>
+        <nav>
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#contacts">Contacts</a>
+        </nav>
+      </div>
+    </header>
+
+    <section id="home" class="hero">
+      <div class="container">
+        <div class="hero-text">
+          <h1>About Me</h1>
+          <p>
+            "Hi, I m Asiya! Im currently a developer in progress with She Codes
+            Australia turns out 'building cool stuff' requires more than just
+            weekends and coffee."
+          </p>
+        </div>
+        <div class="profile-picture">
+          <img src="/profile-picture.jpg" alt="Profile Picture" />
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="biography">
+      <div class="container">
+        <div class="avatar">
+          <img src="/avtar.jpg" alt="Avatar Photo" />
+        </div>
+        <div class="bio-text">
+          <h2>Biography</h2>
+          <p>
+            Hi, Im Asiya. Originally from India, I moved to Australia in 2013. I
+            hold a Bachelor's degree in IT from India and currently work as an
+            IT Site Support Engineer at Accenture. Balancing a fulfilling career
+            with family life, Im a proud parent to two wonderful children.
+            Outside of work, I enjoy playing badminton and experimenting in the
+            kitchen. Welcome to my portfolio!".
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contacts" class="contact-form">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <form action="#" method="post">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="subject">Subject:</label>
+          <input type="text" id="subject" name="subject" required />
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Contact Info: [asiyarafiq15@gmail.com] [0469703725]</p>
+      <div class="social-links">
+        <a href="https://github.com/" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
+        >
+      </div>
+    </footer>
   </body>
 </html>
