--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo">
-          <img src="/logo.jpg" alt="Logo" />
-        </div>
+        <img class="logo" src="/logo.jpg" alt="Logo" />
+
         <nav>
           <a href="#home">Home</a>
           <a href="#about">About</a>
-          <a href="#projects">Projects</a>
           <a href="#contacts">Contacts</a>
         </nav>
       </div>
@@ -42,28 +40,35 @@
     </section>
 
     <section id="about" class="biography">
+      <div class="avatar">
+        <img src="/avtar.jpg" alt="Avatar Photo" />
+      </div>
+      <div class="bio-text">
+        <h2>Biography</h2>
+        <p>
+          Hi, Im Asiya. Originally from India, I moved to Australia in 2013. I
+          hold a Bachelor's degree in IT from India and currently work as an IT
+          Site Support Engineer at Accenture. Balancing a fulfilling career with
+          family life, Im a proud parent to two wonderful children. Outside of
+          work, I enjoy playing badminton and experimenting in the kitchen.
+          Welcome to my portfolio!".
+        </p>
+      </div>
+    </section>
+    <section id="projects-link" class="projects-link">
       <div class="container">
-        <div class="avatar">
-          <img src="/avtar.jpg" alt="Avatar Photo" />
-        </div>
-        <div class="bio-text">
-          <h2>Biography</h2>
-          <p>
-            Hi, Im Asiya. Originally from India, I moved to Australia in 2013. I
-            hold a Bachelor's degree in IT from India and currently work as an
-            IT Site Support Engineer at Accenture. Balancing a fulfilling career
-            with family life, Im a proud parent to two wonderful children.
-            Outside of work, I enjoy playing badminton and experimenting in the
-            kitchen. Welcome to my portfolio!".
-          </p>
-        </div>
+        <h2>Check Out My Projects</h2>
+        <p>
+          Explore the projects I have worked on and learn more about my work.
+        </p>
+        <a href="projects.html" class="button">View Projects</a>
       </div>
     </section>
 
     <section id="contacts" class="contact-form">
       <div class="container">
         <h2>Contact Us</h2>
-        <form action="#" method="post">
+        <form action="https://formspree.io/f/mldrbovj" method="POST">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" required />
 
