--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
       <div class="bio-text">
         <h2>Biography</h2>
         <p>
-          Hi, Im Asiya. Originally from India, I moved to Australia in 2013. I
-          hold a Bachelor's degree in IT from India and currently work as an IT
-          Site Support Engineer at Accenture. Balancing a fulfilling career with
-          family life, Im a proud parent to two wonderful children. Outside of
-          work, I enjoy playing badminton and experimenting in the kitchen.
-          Welcome to my portfolio!".
+          Hi, Im Asiya. Originally from India, I relocated to Australia in 2013.
+          I hold a Bachelor's degree in IT from India and am currently working
+          as an IT Site Support Engineer at Accenture. Balancing a rewarding
+          career with family life, I am a proud parent to two wonderful
+          children. Beyond my professional life, I have a passion for playing
+          badminton and love experimenting with new recipes in the kitchen.
+          Welcome to my portfolio, where I showcase my journey and skills.Im
+          excited to share my experiences and projects with you!
         </p>
       </div>
     </section>
