adding screenschots folder

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
     <footer class="footer">
       <p>Contact Info: [asiyarafiq15@gmail.com] [0469703725]</p>
       <div class="social-links">
-        <a href="https://github.com/" target="_blank">GitHub</a>
+        <a
+          href="https://github.com/asiyarafiq/asiyarafiq.github.io"
+          target="_blank"
+          >GitHub</a
+        >
         <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a>
         >
       </div>
